--- a/projects.html
+++ b/projects.html
@@ -89,18 +89,59 @@
     <a href="https://medium.com/@mtuckergrim/designing-for-another-world-6675bea03a8c">Click here to view the blog post on the project</a>
 </div>
 <script>
+    function readCookie(name) {
+        var nameEQ = name + "=";
+        var ca = document.cookie.split(';');
+        for(var i=0;i < ca.length;i++) {
+            var c = ca[i];
+            while (c.charAt(0)==' ') c = c.substring(1,c.length);
+            if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length,c.length);
+        }
+        return null;
+    }
+
+    function checkDarkMode() {
+        var darkMode = readCookie("darkMode");
+        if (darkMode != null) {
+            $('#styleToggle').bootstrapToggle('on');
+        }
+    }
+
+    function createCookie(name,value,days) {
+        if (days) {
+            var date = new Date();
+            date.setTime((days*24*60*60*1000));
+            var expires = "; expires="+date.toGMTString();
+        }
+        else {var expires = "";}
+        document.cookie = name+"="+value+expires+"path=/";
+    }
+
+
     $('#styleToggle').change(function () {
         if ($(this).prop('checked')) {
+            createCookie("darkMode","on",30000);
             $('#styleSheet').attr("href", "styles/darkStyle.css");
-            $('#navBar').attr("class", "navbar navbar-expand-lg navbar-dark")
+            $('#navBar').attr("class", "navbar navbar-expand-lg navbar-dark");
         } else {
+            createCookie("darkMode","",-365);
             $('#styleSheet').attr("href", "styles/normalStyle.css");
             $('#navBar').attr("class", "navbar navbar-expand-lg navbar-light")
         }
     })
+
+    //goes to projects page, carousel incorporation
+    $("img").click(function () {
+        if ($(this).attr('id') == "logo") {
+            var href = 'index.html'
+        } else {
+            var href = 'projects.html#' + $(this).attr('id');
+        }
+        window.location.href = href;
+    })
 </script>
 </body>
-<nav id="navBar" class="navbar navbar-expand-lg navbar-light ">
+<nav class="navbar navbar-expand-lg navbar-light ">
     <a href="https://www.linkedin.com/in/james-witt-41500715a/"><img src="images/LinkedIn.png" class="icon" ></a>
     <a href="mailto:jwitt1234585@gmail.com"><img src="images/email.png"  class="icon"></a>
     <a href="data/JW%20resume.docx"><img src="images/resume.png"  class="icon"></a>
