--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
+<!--
+TODO: make the project title bigger, make the labels bigger and bolder
+make carousel labels larger
+change hcti image
+-->
 <html>
 <head>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-            crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-            crossorigin="anonymous"></script>
     <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
     <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
     <link rel="stylesheet" href="styles/normalStyle.css" id="styleSheet">
@@ -41,7 +40,7 @@
 </nav>
 <br>
 <div style="width: 80%; margin: auto">
-    <h1 id="test">Projects</h1>
+    <h1 class>Projects</h1>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" align="center">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -51,31 +50,31 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img id="wcti" class="d-block w-100 carouselImage" src="images/wctiPage.JPG" alt="First slide">
+                <img id="wcti" class="d-block w-100 carouselImage" src="images/wctiLogo.png" alt="First slide">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5 class="carouselText">WCTI Redesign</h5>
-                    <p></p>
+                    <h1 class="carouselText">WCTI Redesign</h1>
+                    <p class="carouselDescription">This project was about redesigning the WCTI website to be a mobile app</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img id="data" class="d-block w-100 carouselImage" style="background-color: black"src="images/dataVisual.png" alt="Second slide">
+                <img id="data" class="d-block w-100 carouselImage" src="images/dataVisual.png" alt="Second slide">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5 class="carouselText">Data visualization</h5>
-                    <p></p>
+                    <h1 class="carouselText">Data visualization</h1>
+                    <p class="carouselDescription">This project explores different ways to display data</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img id="chatBot" class="d-block w-100 carouselImage" src="images/chatbot.png" alt="Third slide">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5 class="carouselText">Chatbot</h5>
-                    <p></p>
+                    <h1 class="carouselText">Chatbot</h1>
+                    <p class="carouselDescription">This project explores the uses of a chatbot for socially sensitive topics</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img id="VR" class="d-block w-100 carouselImage" src="images/maze.png" alt="Third slide">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5 class="carouselText">VR maze</h5>
-                    <p></p>
+                    <h1 class="carouselText">VR maze</h1>
+                    <p class="carouselDescription">This project explores the use of VR to transport users to another world</p>
                 </div>
             </div>
         </div>
