--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ change hcti image
 </nav>
 <br>
 <div style="width: 80%; margin: auto">
-    <h1 class>Projects</h1>
+    <h1 style="text-align: left">Projects</h1>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" align="center">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
