changed accordion header text size

--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
         <div class="card">
             <div class="card-header" id="headingwcti">
                 <h2 class="mb-0">
-                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapsewcti"
+                    <button class="btn btn-link headerText" type="button" data-toggle="collapse" data-target="#collapsewcti"
                             aria-expanded="true" aria-controls="collapsewcti">
                         HCTI Redesign
                     </button>
@@ -67,7 +67,7 @@
         <div class="card">
             <div class="card-header" id="headingchatBot">
                 <h2 class="mb-0">
-                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                    <button class="btn btn-link headerText collapsed" type="button" data-toggle="collapse"
                             data-target="#collapsechatBot" aria-expanded="false" aria-controls="collapsechatBot">
                         Chatbot
                     </button>
@@ -93,7 +93,7 @@
         <div class="card">
             <div class="card-header" id="headingdata">
                 <h2 class="mb-0">
-                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                    <button class="btn btn-link headerText collapsed" type="button" data-toggle="collapse"
                             data-target="#collapsedata" aria-expanded="false" aria-controls="collapsedata">
                         Data Visualization
                     </button>
@@ -135,7 +135,7 @@
         <div class="card">
             <div class="card-header" id="VR">
                 <h2 class="mb-0">
-                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                    <button class="btn btn-link headerText collapsed" type="button" data-toggle="collapse"
                             data-target="#collapseVR" aria-expanded="false" aria-controls="collapseVR">
                         VR Maze
                     </button>
